objects/DL_VC__VC_Value_Proposition__c.object
<CustomObject>
    <fields>
        <fullName>DL_VC__Cost_of_Delay__c</fullName>
        <label>Cost of Delay</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Discovery_Answer_10__c</fullName>
        <description>This field populates ValueCloud&apos;s Discovery Answer 10.</description>
        <label>Discovery Answer 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DL_VC__Discovery_Answer_1__c</fullName>
        <description>This field populates ValueCloud&apos;s Discovery Answer 1.</description>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DL_VC__Discovery_Answer_2__c</fullName>
        <description>This field populates ValueCloud&apos;s Discovery Answer 2.</description>
        <label>Discovery Answer 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DL_VC__Discovery_Question_10__c</fullName>
        <description>This field populates ValueCloud&apos;s Discovery Question 10.</description>
        <label>Discovery Question 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DL_VC__Discovery_Question_1__c</fullName>
        <description>This field populates ValueCloud&apos;s Discovery Question 1.</description>
        <label>Discovery Question 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DL_VC__Discovery_Question_2__c</fullName>
        <description>This field populates ValueCloud&apos;s Discovery Question 2.</description>
        <label>Discovery Question 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DL_VC__NPV__c</fullName>
        <label>NPV</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Payback__c</fullName>
        <label>Payback</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__ROI__c</fullName>
        <label>ROI</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Status_Id__c</fullName>
        <label>Status Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DL_VC__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__TCO__c</fullName>
        <label>TCO</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Term__c</fullName>
        <label>Term</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Total_Benefits__c</fullName>
        <label>Total Benefits</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Total_Costs__c</fullName>
        <label>Total Costs</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__VC_Go_To_Customer__c</fullName>
        <label>Did VP Info go to Customer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DL_VC__VC_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Value Propositions</relationshipLabel>
        <relationshipName>Value_Propositions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DL_VC__VC_Use_In_Dashboard__c</fullName>
        <label>Use this VP in Managers Dashboards?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Use this Value Prop in Managers Dashboards</fullName>
                    <default>true</default>
                    <label>Use this Value Prop in Managers Dashboards</label>
                </value>
                <value>
                    <fullName>Omit from reporting: solution change</fullName>
                </value>
                <value>
                    <fullName>Omit from reporting: what-if scenario</fullName>
                </value>
                <value>
                    <fullName>Omit from reporting: practice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DL_VC__VC_VP_Status__c</fullName>
        <label>Value Prop Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                    <default>true</default>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DL_VC__VC_Value_Prop_Id__c</fullName>
        <externalId>true</externalId>
        <label>Value Proposition Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Value Proposition</label>
    <listViews>
        <fullName>DL_VC__All</fullName>
        <columns>NAME</columns>
        <columns>DL_VC__VC_Opportunity__c</columns>
        <columns>DL_VC__ROI__c</columns>
        <columns>DL_VC__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DL_VC__TCO__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Value Proposition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Propositions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>